--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -19,6 +19,12 @@ on:
         required: false
         default: 'false'
 
+# 定时触发开启开始编译(把下面两个#去掉开启,时间设置请看定时开启编译说明)
+schedule:
+ - cron: 0 20 * * 5
+
+
+
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
