--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 # 定时触发开启开始编译(把下面两个#去掉开启,时间设置请看定时开启编译说明)
-schedule:
- - cron: 0 20 * * 5
+#schedule:
+#- cron: 0 20 * * 5
 
 
 
